# video_test_gs

./: CMakeLists.txt  README.md  t-launch-1.0 v4l2src ! videoconvert ! videoscale ! videorate ! \
include/: logger.h  qos_controller.h  utils.h  xor_fec.h
src/: logger.cpp  main.cpp  qos_controller.cpp  utils.cpp  xor_fec.cpp
